--- a/logger/logging.yaml
+++ b/logger/logging.yaml
@@ -20,6 +20,15 @@ handlers:
         backupCount: 20
         encoding: utf8
 
+    sample:
+        class: logging.handlers.RotatingFileHandler
+        level: INFO
+        formatter: simple
+        filename: logs/sample.log
+        maxBytes: 10485760 # 10MB
+        backupCount: 20
+        encoding: utf8
+
     error_file_handler:
         class: logging.handlers.RotatingFileHandler
         level: ERROR
@@ -30,6 +39,11 @@ handlers:
         encoding: utf8
 
 loggers:
+    sample:
+        level: INFO
+        handlers: [console, sample]
+        propagate: no
+
     my_module:
         level: INFO
         handlers: [console, info_file_handler]
